@@ -218,6 +218,7 @@ public class EMFFileWatcher implements FileSystemWatcherListener {
     
     private void createResource(List<String> uris, List<Resource> toHandle) {
 	for (String uri : uris) {
+	    System.out.println("Loading URI " + uri);
 	    int index = uri.lastIndexOf('.');
 	    if (index != -1) {
 		String fileExtension = uri.substring(index + 1);
@@ -225,7 +226,10 @@ public class EMFFileWatcher implements FileSystemWatcherListener {
 		    Resource resource = loadJsonschema(uri);
 		    toHandle.add(resource);
 		} else if (resourceSet.getResourceFactoryRegistry().getExtensionToFactoryMap().containsKey(fileExtension)) {
-		    Resource resource = resourceSet.createResource(URI.createURI(uri));
+		    Resource resource = resourceSet.getResource(URI.createURI(uri), false);
+		    if(resource == null) {
+			resource = resourceSet.createResource(URI.createURI(uri));
+		    }
 		    toHandle.add(resource);
 		}
 	    }
@@ -264,7 +268,12 @@ public class EMFFileWatcher implements FileSystemWatcherListener {
 	    } else {
 		resource.getContents().forEach(EcoreUtil::resolveAll);
 	    }
-
+	}
+	for (Iterator<Resource> iterator = resourceSet.getResources().iterator(); iterator.hasNext();) {
+	    Resource resource = iterator.next();
+	    if(resource.getContents().isEmpty()) {
+		iterator.remove();
+	    }
 	}
     }
 
@@ -272,8 +281,7 @@ public class EMFFileWatcher implements FileSystemWatcherListener {
 	List<Metadata> metadataToHandle = new ArrayList<>();
 	for (Resource resource : toHandle) {
 	    EObject eObject = resource.getContents().get(0);
-	    if (eObject instanceof EPackage) {
-		EPackage ePackage = (EPackage) eObject;
+	    if (eObject instanceof EPackage ePackage) {
 		if (resourceSet.getPackageRegistry().containsKey(ePackage.getNsURI())) {
 		    resource.unload();
 		    resourceSet.getResources().remove(resource);
@@ -287,11 +295,16 @@ public class EMFFileWatcher implements FileSystemWatcherListener {
 		Metadata metadata = new Metadata();
 		metadata.originalFileUri = resource.getURI().toString();
 		metadata.resource = resource;
-		resource.setURI(URI.createURI(ePackage.getNsURI()));
 		metadata.services.put(ePackage, new ArrayList<>());
 		addSubPackages(metadata, ePackage.getESubpackages());
 		originalToNsUri.put(metadata.originalFileUri, metadata);
 		metadataToHandle.add(metadata);
+	    }
+	}
+	for (Resource resource : toHandle) {
+	    EObject eObject = resource.getContents().get(0);
+	    if (eObject instanceof EPackage ePackage) {
+		resource.setURI(URI.createURI(ePackage.getNsURI()));
 	    }
 	}
 	metadataToHandle.forEach(this::registerConfigurators);
@@ -442,7 +455,7 @@ public class EMFFileWatcher implements FileSystemWatcherListener {
      */
     @Override
     public void handleInitialPaths(List<Path> paths) {
-	List<String> toAdd = paths.stream().map(Path::toUri).map(Object::toString).collect(Collectors.toList());
+	List<String> toAdd = paths.stream().map(this::cleanUpPath).toList();
 	scheduleDelaied(toAdd);
     }
 
@@ -454,16 +467,21 @@ public class EMFFileWatcher implements FileSystemWatcherListener {
      */
     @Override
     public void handlePathEvent(Path path, Kind<Path> kind) {
+	String pathString = cleanUpPath(path);
 	if (StandardWatchEventKinds.ENTRY_MODIFY.equals(kind)) {
-	    handleRemove(List.of(path.toUri().toString()));
-	    scheduleDelaied(path.toUri().toString());
+	    handleRemove(List.of(pathString));
+	    scheduleDelaied(pathString);
 	} else if (StandardWatchEventKinds.ENTRY_CREATE.equals(kind)) {
-	    scheduleDelaied(path.toUri().toString());
+	    scheduleDelaied(pathString);
 	} else if (StandardWatchEventKinds.ENTRY_DELETE.equals(kind)) {
-	    handleRemove(List.of(path.toUri().toString()));
+	    handleRemove(List.of(pathString));
 	}
     }
 
+    public String cleanUpPath(Path path) {
+	return path.toAbsolutePath().normalize().toUri().toString();
+    }
+    
     private List<String> uris = new ArrayList<>();
 
     Timer timer = new Timer();
